--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,12 @@
         }
     ],
     "require": {
-        "php": "^5.6"
+        "php": ">=5.6",
+        "phpunit/phpunit": "^9.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "MidiConverter\\Tests\\": "tests"
+        }
     }
 }
