transfer old Midi class to PSR4 structure

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "autoload": {
         "psr-4": {
+            "MidiConverter\\": "src",
             "MidiConverter\\Tests\\": "tests"
         },
         "files": [
